--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.3
 colorama==0.4.5
 dill==0.3.5.1
 distlib==0.3.5
+et-xmlfile==1.1.0
 filelock==3.7.1
 flake8==4.0.1
 identify==2.5.2
@@ -17,6 +18,7 @@ mccabe==0.6.1
 mypy-extensions==0.4.3
 nodeenv==1.7.0
 numpy==1.23.1
+openpyxl==3.0.10
 packaging==21.3
 pandas==1.4.3
 pathspec==0.9.0
