--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.5.2
 astroid==2.11.7
 atomicwrites==1.4.1
 attrs==21.4.0
@@ -7,6 +8,7 @@ click==8.1.3
 colorama==0.4.5
 dill==0.3.5.1
 distlib==0.3.5
+Django==4.1.2
 et-xmlfile==1.1.0
 filelock==3.7.1
 flake8==4.0.1
@@ -36,8 +38,10 @@ pytz==2022.1
 PyYAML==6.0
 scipy==1.8.1
 six==1.16.0
+sqlparse==0.4.3
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.1
+tzdata==2022.4
 virtualenv==20.16.0
 wrapt==1.14.1
