--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ flake8==4.0.1
 identify==2.5.2
 iniconfig==1.1.1
 isort==5.10.1
+joblib==1.2.0
 lazy-object-proxy==1.7.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
@@ -25,6 +26,7 @@ packaging==21.3
 pandas==1.4.3
 pathspec==0.9.0
 platformdirs==2.5.2
+plotly==5.10.0
 pluggy==1.0.0
 pre-commit==2.20.0
 py==1.11.0
@@ -36,9 +38,12 @@ pytest==7.1.2
 python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==6.0
+scikit-learn==1.1.2
 scipy==1.8.1
 six==1.16.0
 sqlparse==0.4.3
+tenacity==8.1.0
+threadpoolctl==3.1.0
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.1
