--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,22 @@ black==22.6.0
 cfgv==3.3.1
 click==8.1.3
 colorama==0.4.5
+contourpy==1.0.6
+cycler==0.11.0
 dill==0.3.5.1
 distlib==0.3.5
 Django==4.1.2
 et-xmlfile==1.1.0
 filelock==3.7.1
 flake8==4.0.1
+fonttools==4.38.0
 identify==2.5.2
 iniconfig==1.1.1
 isort==5.10.1
 joblib==1.2.0
+kiwisolver==1.4.4
 lazy-object-proxy==1.7.1
+matplotlib==3.6.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
 nodeenv==1.7.0
@@ -25,6 +30,7 @@ openpyxl==3.0.10
 packaging==21.3
 pandas==1.4.3
 pathspec==0.9.0
+Pillow==9.3.0
 platformdirs==2.5.2
 plotly==5.10.0
 pluggy==1.0.0
@@ -50,3 +56,4 @@ tomlkit==0.11.1
 tzdata==2022.4
 virtualenv==20.16.0
 wrapt==1.14.1
+yellowbrick==1.5
